feat: implement Zowe CLI schema compliance and improve code organization
- Updated ZOSMFProfile to match official Zowe CLI schema format
- Added support for base profile inheritance from global_base
- Enhanced profile structure with protocol, encoding, timeout, and cert fields
- Reorganized code: moved ZoweConfig to types.go, created session.go for session functions
- Added BaseProfile struct for global_base profile support
- Implemented proper inheritance logic (base profile properties inherited by ZOSMF profiles)
- Updated all tests to use new schema format and added missing test coverage
- Improved test coverage from 62.8% to 83.1%

Addresses my mentor feedback for schema compliance, code organization, and base profile inheritance.

--- a/examples/sample_zowe_config.json
+++ b/examples/sample_zowe_config.json
@@ -1,33 +1,30 @@
 {
+  "$schema": "./zowe.schema.json",
   "profiles": {
     "zosmf": {
-      "default": {
+      "type": "zosmf",
+      "properties": {
         "host": "mainframe.example.com",
         "port": 443,
         "user": "myuser",
         "password": "mypassword",
         "rejectUnauthorized": true,
-        "basePath": "/zosmf/api/v1"
+        "basePath": "/zosmf/api/v1",
+        "protocol": "https"
       },
-      "dev": {
-        "host": "dev-mainframe.example.com",
-        "port": 8080,
-        "user": "devuser",
-        "password": "devpassword",
-        "rejectUnauthorized": false,
-        "basePath": "/api/v1"
+      "secure": ["user", "password"]
+    },
+    "global_base": {
+      "type": "base",
+      "properties": {
+        "host": "mainframe.example.com",
+        "rejectUnauthorized": true
       },
-      "test": {
-        "host": "test-mainframe.example.com",
-        "port": 8443,
-        "user": "testuser",
-        "password": "testpassword",
-        "rejectUnauthorized": true,
-        "basePath": ""
-      }
+      "secure": ["user", "password"]
     }
   },
-  "default": {
-    "zosmf": "default"
-  }
+  "defaults": {
+    "zosmf": "zosmf"
+  },
+  "autoStore": true
 } 
