feat: Add zXplore integration testing support
- Add clean GitHub test file (test_zxplore_github.go) using environment variables
- Add zXplore-specific GitHub Actions workflow (zxplore-test.yml)
- Update ZXPLORE_TESTING.md with GitHub Actions setup instructions
- Update .gitignore to exclude sensitive files and integration folder
- Update zowe.config.json with placeholder credentials
- Document successful zXplore connectivity and API testing results

The SDK now supports:
- Secure credential management via environment variables
- Automated zXplore testing with dedicated GitHub Actions workflow
- Comprehensive zXplore platform integration
- Jobs and Datasets API connectivity verification
- Clean separation from integration test folder

Ready for production use with zXplore platform.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,25 @@ Thumbs.db
 .env
 .env.local
 
+# Sensitive test files (contain hardcoded credentials)
+test_zxplore.go
+test_zxplore_diagnostic.go
+test_zxplore_working.go
+test_zxplore_web_verify.go
+test_zxplore_auth_debug.go
+test_zxplore_correct_apis.go
+test_zxplore_final.go
+
+# Local setup scripts
+setup_zxplore_test.bat
+setup_zxplore_test.ps1
+
+# Local configuration files with credentials
+zowe.config.json
+
+# Integration test folder (separate repo)
+integration/
+
 # Temporary files
-tmp/
-temp/ 
+*.tmp
+*.temp 
