fix: Enable CI workflow on integration-tests branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, integration-tests ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, integration-tests ]
 
 jobs:
   build-and-test:
